# proxy-collector

./: .dockerignore  .gitignore  .gitlab-ci.yml  .ignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  container-structure-test.yaml  docker-compose.yml  openapitools.json
.devcontainer/: devcontainer.json  override.yml
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: build-and-push.yml
_generated/openapi/server/: .openapi-generator-ignore
_generated/openapi/server/.openapi-generator/: FILES
_generated/openapi/server/src/apis/: documents_api.rs
_generated/openapi/server/src/models/: http_validation_error.rs  mod.rs  user.rs
_generated/server/openapi/: Cargo.toml
_generated/server/openapi/src/apis/: configuration.rs  mod.rs  users_api.rs
_generated/server/openapi/src/models/: create_document.rs  document.rs  location_inner.rs  validation_error.rs
chart/: Chart.yaml  values.schema.json  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
examples/: log.rs
lib/: Cargo.toml
lib/src/auth/: credentials.rs
lib/src/http/: request.rs  response.rs
lib/src/proxy/: flow.rs  mod.rs
lib/tests/: proxy_tests.rs  web_tests.rs
src/: auth.rs  lib.rs  main.rs
src/auth/: credentials.rs  mod.rs
src/collector/: mod.rs  processor.rs
src/http/: request.rs  response.rs
src/proxy/: mod.rs
src/reporter/: mod.rs  processor.rs
src/web/: mod.rs
tests/: integration_test.rs  integration_tests.rs  web_tests.rs
