[package]
name = "kkowa-proxy-collector"
version = "0.1.0"
edition = "2021"
authors = ["Yuchan Lee <lasuillard@gmail.com>"]

[dependencies]
anyhow = "1.0"
async-std = "1.12"
async-trait = "0.1"
base64 = "0.13"
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = "0.9"
http = "0.2"
http-serde = "1.1"
hyper = { version = "0.14", features = ["full"] }
json_dotpath = "1.1"
jsonpath_lib = "0.3"
kkowa-proxy-lib = { git = "https://github.com/kkowa/proxy-lib", branch = "main" }
lazy_static = "1.4"
log = "0.4"
metrics-exporter-prometheus = "0.11"
once_cell = "1.16"
portpicker = "0.1"
regex = "1.6"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.9"
server-openapi = { path = "_generated/openapi/server" }
structstruck = "0.2"
thiserror = "1.0"
tokio = { version = "1.23", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
futures = "0.3"
httpmock = "0.6"
reqwest = "0.11"
rstest = "0.15"
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
